# MetalStarter

./: CMakeLists.txt  README.md
src/: main.cpp  renderer.cpp  renderer.h
src/gfx/: base_renderer.cpp  base_renderer.h  renderer.cpp  renderer.h
src/platform/: app_delegate.cpp  app_delegate.h  apple.cpp  apple.h  mtk_view.cpp  mtk_view.h
